<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Permissions.SMSActivity">

    <EditText
        android:id="@+id/phoneNumberEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_margin="10dp"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/messageEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:inputType="phone"
        android:layout_margin="10dp"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/messageBtn"
        android:onClick="sendMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:background="@color/design_default_color_primary"/>

</LinearLayout>