<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_margin="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_label"
                android:textAlignment="center"
                android:textSize="30dp"
                android:layout_marginTop="30dp"
                android:textStyle="bold|italic"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_account_circle_black_24dp"
                android:layout_marginTop="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_marginTop="50dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/username"
                    android:textStyle="bold|italic"
                    android:textSize="15dp"/>

                <EditText
                    android:id="@+id/edtUsername"
                    android:inputType="text"
                    android:layout_width="0dp"
                    android:outlineAmbientShadowColor="@color/cardview_dark_background"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/password"
                    android:outlineAmbientShadowColor="@color/cardview_dark_background"
                    android:textStyle="bold|italic"
                    android:textSize="15dp"/>

                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/edtPassword"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/btn_submit"
                android:onClick="login"
                android:textStyle="bold|italic"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:paddingLeft="7dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>